--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -55,8 +55,8 @@
       width: 70%;
       height: 70%;
       object-fit: contain;
-      filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.322)) hue-rotate(150deg);
-      animation: upupdowndown 0.7s infinite linear alternate;
+      filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.322));
+      // animation: upupdowndown 0.7s infinite linear alternate;
     }
   }
 }
