--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -62,7 +62,7 @@
 
           &::after {
             content: "";
-            background-color: $color4;
+            // background-color: $color4;
             width: 100%;
             height: 5rem;
             border-radius: 50px;
